--- a/_projects/cool/Cool.html
+++ b/_projects/cool/Cool.html
@@ -77,10 +77,11 @@ description: Cool 编译器
     <summary>Cool 语言介绍</summary>
     <div class="bd-callout bd-callout-info">
       <pre>
-Cool (Classroom Object-Oriented Language) Cool 保留了现代编程语言的许多功能，包括对象、静态类型和自动内存管理。
-Cool 程序由多个类构成，单继承机制，其中 Main 类的 main 方法是程序的入口函数。
-Cool 是一种表达式语言，每个表达式都有一个值和类型。
-Cool 是类型安全的，类型检查保证在 Cool 程序的执行中不会出现运行时类型错误。</pre>
+Cool (Classroom Object-Oriented Language) 是斯坦福大学CS143课程为教学设计的一门语言
+Cool 保留了现代编程语言的许多功能，包括对象、静态类型和自动内存管理
+Cool 程序由多个类构成，单继承机制，其中 Main 类的 main 方法是程序的入口函数
+Cool 是一种表达式语言，每个表达式都有一个值和类型
+Cool 是类型安全的，类型检查保证在 Cool 程序的执行中不会出现运行时类型错误</pre>
     </div>
   </details>
   <details>
