--- a/_projects/cool/Cool.html
+++ b/_projects/cool/Cool.html
@@ -85,6 +85,12 @@ Cool 是类型安全的，类型检查保证在 Cool 程序的执行中不会出
     </div>
   </details>
   <details>
+    <summary>Cool 关键字</summary>
+    <div class="bd-callout bd-callout-info">
+      <pre>class, inherits, if, then, else, fi, let, in, while, loop, pool, case, of, esac, new, isvoid, assign, not</pre>
+    </div>
+  </details>
+  <details>
     <summary>Cool 中的基础类</summary>
     <div class="bd-callout bd-callout-info">
       <pre>
