--- a/_projects/2.bustub/bustub.html
+++ b/_projects/2.bustub/bustub.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /projects/bustub/index.html
+permalink: /projects/2.bustub/index.html
 description: Bustub 数据库
 ---
 <!-- jQuery -->
