rename and add project C minus

--- a/_projects/malloc/malloc.html
+++ b/_projects/malloc/malloc.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /projects/4.malloc/index.html
+permalink: /projects/malloc/index.html
 description: Malloc, Free, Realloc 函数
 ---
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
