--- a/_projects/cminus/C-minus.html
+++ b/_projects/cminus/C-minus.html
@@ -82,6 +82,8 @@ description: C-minus 编译器
 
 </script>
 <div class="container-lg mb-5">
+  <a href="https://github.com/1sunny/ustc-cminus" class="link-primary">https://github.com/1sunny/ustc-cminus</a>
+
   <details>
     <summary>C-minus 语言介绍</summary>
     <div class="bd-callout bd-callout-info">
