--- a/_projects/cool/Cool.html
+++ b/_projects/cool/Cool.html
@@ -73,6 +73,8 @@ description: Cool 编译器
 
 </script>
 <div class="container-lg">
+  <a href="https://github.com/1sunny/cs143-cool-compiler-lab" class="link-primary">https://github.com/1sunny/cs143-cool-compiler-lab</a>
+
   <details>
     <summary>Cool 语言介绍</summary>
     <div class="bd-callout bd-callout-info">
