--- a/_projects/pintos/pintos.html
+++ b/_projects/pintos/pintos.html
@@ -24,7 +24,7 @@ description: Pintos 操作系统
       <pre>Pintos 是一个80x86架构的教学操作系统，支持内核线程、加载和运行用户程序，以及文件系统</pre>
     </div>
   </details>
-  <iframe src="http://47.122.117.187:8888" width="100%" height="500px" style="padding-bottom: 3px;"></iframe>
+  <iframe src="http://47.122.117.187:8888" width="100%" height="500px" style=""></iframe>
 </div>
 </body>
 <style>
