add permission notes

--- a/_projects/cminus/C-minus.html
+++ b/_projects/cminus/C-minus.html
@@ -91,6 +91,14 @@ description: C-minus 编译器
 </script>
 <div class="container-lg mb-5">
   <a href="https://github.com/1sunny/ustc-cminus" class="link-primary">https://github.com/1sunny/ustc-cminus</a>
+  <br>
+  <br>
+  <b>若需查看运行效果，<span style="color: rgb(196, 38, 38);">需要允许网站中发送http请求</span>，</b>否则点击<b>编译&运行</b>将会显示<b>"Request failed: TypeError: Failed to fetch"</b>。<br>
+  <b>步骤：</b>
+  <ul>
+    <li>对于Chrome浏览器：点击地址栏左边的<b>感叹号图标</b>，选择<b>网站设置</b>，将<b>不安全的内容</b>项设置为<b>允许</b></li>
+    <li>对于Edge浏览器：点击地址栏左边的<b>锁图标</b>，选择<b>此网站的权限</b>，将<b>不安全的内容</b>项设置为<b>允许</b></li>
+  </ul>
 
   <details>
     <summary>C-minus 语言介绍</summary>
