--- a/_projects/pintos/pintos.html
+++ b/_projects/pintos/pintos.html
@@ -17,6 +17,8 @@ description: Pintos 操作系统
 <div class="container-lg mb-5">
   <a href="https://github.com/1sunny/pintos" class="link-primary">https://github.com/1sunny/pintos</a>
 
+  <br>
+  <div style="color: rgb(196, 38, 38);"><b>访问需要密码，需本人显示</b></div>
 
   <details>
     <summary>Pintos 操作系统介绍</summary>
