--- a/_projects/pintos/pintos.html
+++ b/_projects/pintos/pintos.html
@@ -18,7 +18,7 @@ description: Pintos 操作系统
   <a href="https://github.com/1sunny/pintos" class="link-primary">https://github.com/1sunny/pintos</a>
 
   <br>
-  <div style="color: rgb(196, 38, 38);"><b>访问需要密码，需本人显示</b></div>
+  <div style="color: rgb(196, 38, 38);"><b>访问需要密码，需本人演示</b></div>
 
   <details>
     <summary>Pintos 操作系统介绍</summary>
