--- a/_projects/malloc/malloc.html
+++ b/_projects/malloc/malloc.html
@@ -3,8 +3,7 @@ layout: default
 permalink: /projects/malloc/index.html
 description: Malloc, Free, Realloc 函数
 ---
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | relative_url }}">
 
 <script src="./malloc_wasm.js"></script>
 <div class="container-lg mt-5">
